data/derived/comb/progs/unify/prog0639.ml.out
Characters 143-144:
  List.fold_left f base l;;
                        ^
Error: This expression has type string -> string
       but an expression was expected of type (string -> string) list
